<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.beballer.beballer.utils.BaseCustomDialog.Listener" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/btn_bg_5_radius"
        android:backgroundTint="@color/white">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvApply"
            style="@style/TextView.InterSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/delete_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotification"
            style="@style/TextView.InterMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="start"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvApply"
            app:layout_constraintTop_toBottomOf="@+id/tvApply" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/GreenButton"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/chat_et_bg"
            android:backgroundTint="@color/view_color"
            android:fontFamily="@font/inter_semi_bold"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:text="@string/cancel"
            android:textColor="@color/black_000000"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/btnConfirm"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnConfirm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            style="@style/GreenButton"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/chat_et_bg"
            android:backgroundTint="@color/view_color"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:text="@string/delete"
            android:textColor="@color/eight_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>